Title: [UI/Feature] Hoàn thiện giao diện Đặt vé Nhiều thành phố & Kết nối DB Sân bay
1. Database & Kiến trúc:

Xây dựng cấu trúc Model - DAL - BUS cho đối tượng Sân bay.

Kết nối SQL Server, lấy dữ liệu Sân bay thực tế đổ động vào các JComboBox thay vì hardcode.

2. Cấu trúc Layout (Giao diện):

Áp dụng BorderLayout và BoxLayout (Y_AXIS) giúp form tự động co giãn và rớt dòng mượt mà.

Sử dụng CENTER_ALIGNMENT neo toàn bộ nội dung ở chính giữa màn hình.

Xử lý dứt điểm lỗi phình to nút Tìm kiếm và các hàng chuyến bay bằng setMaximumSize.

3. Chức năng & Logic cốt lõi:

Nhiều thành phố: Tự động sinh hàng chuyến bay động, quản lý logic ẩn/hiện nút "Xóa" thông minh (chỉ hiện khi có >= 3 chuyến).

Đồng bộ Sân bay: Cập nhật hiệu ứng đổi chiều <=> và thuật toán loại trừ (chọn sân bay bên Từ sẽ tự biến mất ở bên Đến).

Lịch thông minh: Cấu hình ngày chặn tự động dựa vào chuyến trước đó, hỗ trợ tịnh tiến ngày dây chuyền khi người dùng sửa lịch.

--- a/src/gui/DangNhapFrm.form
+++ b/src/gui/DangNhapFrm.form
@@ -160,6 +160,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnGoogleAcc">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Google"/>
           </Properties>
           <Events>
@@ -168,6 +171,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnFacebookAcc">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="cc" green="cc" red="cc" type="rgb"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Facebook"/>
           </Properties>
           <Events>
@@ -197,6 +203,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnConfirm">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="33" green="ff" red="ff" type="rgb"/>
+            </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Arial" size="14" style="3"/>
             </Property>
@@ -209,7 +218,7 @@
               <Font name="Times New Roman" size="40" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="e5" green="de" red="4c" type="rgb"/>
+              <Color blue="0" green="0" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="&#x110;&#x102;NG NH&#x1eac;P T&#xc0;I KHO&#x1ea2;N "/>
           </Properties>
